# qpipewirehandler

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp  democontroller.cpp  democontroller.h  demoviewer.cpp  demoviewer.h
src/: qpipewirehandler.cpp  qpipewirehandler.h
